2002-11-01  Ethan Merritt  <merritt@u.washington.edu>

        * src/axis.c src/gadgets.c src/graph3d.c src/term.c term/pdf.trm: 
	Remove unused variables and add #include statements to pick up missing
	function prototypes. This fixes current crop of warnings from gcc -Wall.

2002-10-31  Ethan Merritt  <merritt@u.washington.edu>

        * prepare: Fix capitalization of 'Makefile.in' in prepare script.

2002-10-25  Ethan Merritt  <merritt@u.washington.edu>

        * term/pdf.trm: Bring pattern fill behavior into conformity with other
	terminals (opaque background, continuous lines).

2002-10-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* prepare: Added sed command to fix a bug in automake's output to
	src/Makefile.in: missing $(EXEEXT).

2002-10-25  Ethan Merritt  <merritt@u.washington.edu>

        * src/graphics.c src/win/wgraph.c term/fig.trm term/pdf.trm:
	Replace tests on fillstyle parameter to use enums FS_* instead of pure
	constants.

2002-10-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* win/winmain.h win/winmain.c(kill_pending_Pause_dialog(void)): New
	routine. Kills pending "Pause" dialog box on Windows. Called from
	bail_from_command_line().

	* command.h command.c(call_kill_pending_Pause_dialog(void)): New
	routine. Calls win/winmain.c: kill_pending_Pause_dialog().

	* plot.c(bail_to_command_line): On Windows, call 
	kill_pending_Pause_dialog() when you bail to command line. Needed if
	gnuplot encounters a (re)plotting error when Pause dialog is displayed 
	(e.g. due to very small ranges in mouse zoom or log axis for negative 
	values in data file). Otherwise the Pause dialog stays on the desktop
	until you quit gnuplot.

2002-10-21  Ethan Merritt  <merritt@u.washington.edu>

        * NEWS, docs/gnuplot.doc: Add reference to current `set style fill`
	and `set style line` commands.

2002-09-21  Harald Harders  <h.harders@tu-bs.de>

	* NEWS demo/all.dem demo/arrowstyle.dat demo/arrowstyle.dem